--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/typeorm": "^11.0.0",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
